syntax = "proto3";

package proto;

import "proto/salt.proto";

message PeeringRequest {
  // unix time
  int64 timestamp = 1;
  // salt of the requester
  Salt salt = 2;
}

message PeeringResponse {
  // hash of the corresponding request
  bytes req_hash = 1;
  // response of a peering request
  bool status = 2;
}

message PeeringDrop {
  // unix time
  int64 timestamp = 1;
}
